<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BJH3</string>
    <string name="app_name_prefs">BJH3 Settings</string>
    <string name="app_name_long">Beijing Hash House Harriers</string>
    <string name="action_settings">Settings</string>
    <string name="action_website">Homepage</string>
    <string name="action_changelog">Changelog</string>
    <string name="action_update_articles">Update Articles</string>
    <string name="action_update_application">Update Application</string>

</resources>