<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_website"
        android:orderInCategory="1"
        android:title="@string/action_website"/>
    <item
        android:id="@+id/action_changelog"
        android:orderInCategory="1"
        android:title="@string/action_changelog"/>
    <item
        android:id="@+id/action_update"
        android:orderInCategory="2"
        android:title="@string/action_update_articles"/>
    <item
        android:id="@+id/action_update_app"
        android:orderInCategory="3"
        android:title="@string/action_update_application"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/action_settings"/>

</menu>